--- a/src/components/menu-item/MenuItem.scss
+++ b/src/components/menu-item/MenuItem.scss
@@ -12,11 +12,6 @@
 	&:hover {
 		cursor: pointer;
 
-		& .background-image {
-			transform: scale(1.1);
-			transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-		}
-
 		& .content {
 			opacity: 0.9;
 		}
@@ -65,4 +60,19 @@
 			text-transform: uppercase;
 		}
 	}
+}
+.zoom {
+	transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-webkit-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-moz-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-ms-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-o-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+	&:hover {
+		transform: scale(1.2);
+		-webkit-transform: scale(1.2);
+		-moz-transform: scale(1.2);
+		-ms-transform: scale(1.2);
+		-o-transform: scale(1.2);
+}
 }
