Add Header.jsx with links to Home, Shop, and Contact pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 body {
    font-family: 'Open Sans Condensed', sans-serif;
-   padding: 1.25em 3.75em;
+   /* padding: 1.25em 3.75em; */
+   padding: 20px 60px;
+}
+
+a {
+   text-decoration: none;
+   color: black;
 }
