Update CollectionItem and MenuItem hover effects

--- a/src/components/menu-item/MenuItem.scss
+++ b/src/components/menu-item/MenuItem.scss
@@ -61,7 +61,7 @@
 		}
 	}
 }
-.zoom {
+.zoom-in-lg {
 	transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
 	-webkit-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
 	-moz-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
