--- a/src/components/collection-item/CollectionItem.scss
+++ b/src/components/collection-item/CollectionItem.scss
@@ -35,12 +35,12 @@
 		}
 	}
 }
-.zoom {
-	transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
-	-webkit-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
-	-moz-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
-	-ms-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
-	-o-transition: transform 6s cubic-bezier(0.075, 0.82, 0.165, 1);
+.zoom-in-sm {
+	transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-webkit-transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-moz-transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-ms-transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+	-o-transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 
 	&:hover {
 		transform: scale(1.05);
