--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*,
+*::after,
+*::before {
+   box-sizing: border-box;
+}
+
 body {
    font-family: 'Open Sans Condensed', sans-serif;
    /* padding: 1.25em 3.75em; */
