--- a/src/components/custom-button/CustomButton.scss
+++ b/src/components/custom-button/CustomButton.scss
@@ -24,8 +24,11 @@
 		color: white;
 
 		&:hover {
-			background-color: #357AE8;
-			border: none;
+			background-color: white;
+			color: #4285F4;
+			border: 1px solid #4285F4;
+			/* background-color: #357AE8;
+			border: none; */
 		}
 	}
 }
